[gd_scene load_steps=12 format=3 uid="uid://c2enh2ufydgvr"]

[ext_resource type="Shader" uid="uid://buge1y7m6rr2" path="res://blurry.gdshader" id="1_bqqt6"]
[ext_resource type="Script" uid="uid://lsphcb070r0j" path="res://scripts/gdscript/main_menu.gd" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bqey1inkg0n4h" path="res://assets/maps/map_2.png" id="2_wu84c"]
[ext_resource type="Script" uid="uid://38mlh5kuftla" path="res://Blurry.cs" id="3_8ln24"]
[ext_resource type="Theme" uid="uid://dtd7d0qqqnr0g" path="res://main_m_buttons.tres" id="6_oa1go"]
[ext_resource type="AudioStream" uid="uid://m7jg7xcjyfm5" path="res://assets/sfx/Game Start Beep.mp3" id="6_tbmy8"]
[ext_resource type="AudioStream" uid="uid://b4mjlrih0cphk" path="res://assets/sfx/2.wav" id="7_jk1qb"]
[ext_resource type="AudioStream" uid="uid://c4bhbysgwnkwc" path="res://assets/music/Crying Painting Theme (MIXED 2).mp3" id="8_tbmy8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtw2f"]
shader = ExtResource("1_bqqt6")
shader_parameter/strength = 3.3
shader_parameter/sample_power = 4
shader_parameter/is_canvas_group = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.192157, 0.192157, 0.192157, 0.85098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0319715, 0.059479, 0.114969, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtw2f")

[node name="Backround" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Backround"]
material = SubResource("ShaderMaterial_rtw2f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -130.0
offset_right = 2874.0
offset_bottom = 2582.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wu84c")
expand_mode = 2
stretch_mode = 3
script = ExtResource("3_8ln24")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27
anchor_top = 0.167
anchor_right = 0.768
anchor_bottom = 0.727
theme_override_styles/panel = SubResource("StyleBoxFlat_8ln24")

[node name="buttons" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[wave]Museum Boys Don't Cry[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="PanelContainer2/buttons"]
layout_mode = 2

[node name="play" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme = ExtResource("6_oa1go")
text = "Play Game
"

[node name="credits" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="exit" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="credits" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.023
anchor_top = 0.185
anchor_right = 0.259
anchor_bottom = 0.688
offset_left = -0.160004
offset_top = -71.8
offset_right = -0.279999
offset_bottom = 106.96
theme_override_styles/panel = SubResource("StyleBoxFlat_rtw2f")

[node name="RichTextLabel" type="RichTextLabel" parent="credits"]
layout_mode = 2
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
text = "Artist: 
Emily Conway

Music and Sound: 
Louise Barret

Programmers: 
Aeofi
Kjartan Klein
						
Writer: 
Conway Sutton"

[node name="onStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tbmy8")

[node name="oncreds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jk1qb")

[node name="Roof_theme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_tbmy8")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="PanelContainer2/buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer2/buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer2/buttons/exit" to="." method="_on_exit_pressed"]
